<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/noto_sans_kr_bold"
            android:text="@string/post_question"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/noto_sans_kr_medium"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/etTitle"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/et_background"
            android:fontFamily="@font/noto_sans_kr_medium"
            android:paddingStart="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/noto_sans_kr_medium"
            android:text="@string/detail"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/etTitle"
            app:layout_constraintTop_toBottomOf="@+id/etTitle" />

        <EditText
            android:id="@+id/etText"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:layout_margin="10dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/et_background"
            android:fontFamily="@font/noto_sans_kr_medium"
            android:gravity="top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSocialLife"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/question_top_button_background"
            android:fontFamily="@font/noto_sans_kr_medium"
            android:text="@string/social_life"
            android:textSize="11sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etText" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnFinance"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/question_top_button_background"
            android:fontFamily="@font/noto_sans_kr_medium"
            android:text="@string/finance"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="@+id/btnSocialLife"
            app:layout_constraintStart_toEndOf="@+id/btnSocialLife"
            app:layout_constraintTop_toTopOf="@+id/btnSocialLife" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLaw"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/question_top_button_background"
            android:fontFamily="@font/noto_sans_kr_medium"
            android:text="@string/law"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="@+id/btnFinance"
            app:layout_constraintStart_toEndOf="@+id/btnFinance"
            app:layout_constraintTop_toTopOf="@+id/btnFinance" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnEtc"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/question_top_button_background"
            android:fontFamily="@font/noto_sans_kr_medium"
            android:text="@string/etc"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="@+id/btnLaw"
            app:layout_constraintStart_toEndOf="@+id/btnLaw"
            app:layout_constraintTop_toTopOf="@+id/btnLaw" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDone"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/register_btn"
            android:fontFamily="@font/noto_sans_kr_bold"
            android:text="작성 완료"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>