<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="109dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_logo"
                app:layout_constraintBottom_toTopOf="@+id/btnSocialLife"
                app:layout_constraintStart_toStartOf="@+id/btnSocialLife"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ivMyInfo"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="4dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_user"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSocialLife"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/question_top_button_background"
                android:fontFamily="@font/noto_sans_kr_medium"
                android:text="@string/social_life"
                android:textSize="11sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnFinance"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/question_top_button_background"
                android:fontFamily="@font/noto_sans_kr_medium"
                android:text="@string/finance"
                android:textSize="11sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnSocialLife" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLaw"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/question_top_button_background"
                android:fontFamily="@font/noto_sans_kr_medium"
                android:text="@string/law"
                android:textSize="11sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnFinance" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnEtc"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/question_top_button_background"
                android:fontFamily="@font/noto_sans_kr_medium"
                android:text="@string/etc"
                android:textSize="11sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnLaw" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnMakeQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:backgroundTint="@color/main_color"
            android:layout_marginBottom="13dp"
            android:src="@drawable/ic_question"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <FrameLayout
            android:id="@+id/questionContainer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>